src/objects/Partner_Mgr_Account__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Partner_Account_Category__c</fullName>
        <label>Partner Account Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Mgr_Email__c</fullName>
        <label>Partner Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Mgr_Name__c</fullName>
        <label>Partner Manager Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Partner Manager for Account</label>
</CustomObject>